<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ApplyJobLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.jobListing.ApplyJobActivity">


    <LinearLayout
        android:id="@+id/ApplyJobLL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ApplyJobBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="@android:color/darker_gray"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/ApplyJobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_weight="10"
            android:text="@string/job_listing_details_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toStartOf="@+id/ApplyJobButton"
            app:layout_constraintStart_toEndOf="@+id/JobListingDetailsBackButton"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ApplyJobLL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ApplyJobLL1"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/JobNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_name"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <TextView
            android:id="@+id/JobNameValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ApplyJobLL3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ApplyJobLL2"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/ClientNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_name"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <TextView
            android:id="@+id/ClientNameValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ApplyJobLL4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ApplyJobLL3"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/ApplyJobDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/appy_job_desc_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ApplyJobLL5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ApplyJobLL4"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/ApplyJobDescriptionValueTextView"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <Button
        android:id="@+id/ApplyJobApplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:text="@string/apply_button"
        android:textColor="#4E342E"
        app:backgroundTint="@android:color/darker_gray" />

</RelativeLayout>