<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ApplicantDetailsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.jobListing.ApplicantDetailsActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ApplicantDetailsInnerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/ApplicantDetailsLL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ApplicantDetailsBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:backgroundTint="@android:color/darker_gray"
                    app:srcCompat="?attr/actionModeCloseDrawable"
                    tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/ApplicantDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_weight="10"
                    android:text="@string/applicants_details_title"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintEnd_toStartOf="@+id/ApplicantDetailsButton"
                    app:layout_constraintStart_toEndOf="@+id/JobListingDetailsBackButton"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL1"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/FirstNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_firstName"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/FirstNameValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL2"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/LastNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_lastName"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/LastNameValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL3"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/DescriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_description"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/DescriptionValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL4"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/DOBTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_dob"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/DOBValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL5"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/GenderTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_gender"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/GenderValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL6"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/ContactNoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_contactNo"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/ContactNoValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL7"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/AboutMeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_aboutMe"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/AboutMeValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL8"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/ProfTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profTitle"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/ProfTitleValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL9"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/SkillsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_skills"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/SkillsValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL10"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/LinkedInAcctTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_linkedInAcct"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:id="@+id/LinkedInAcctValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ApplicantDetailsLL12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ApplicantDetailsLL11"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/ApplicantDetailsRejectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/reject_button"
                    android:textColor="#4E342E"
                    app:backgroundTint="@android:color/darker_gray" />
                <Button
                    android:id="@+id/ApplicantDetailsAcceptButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/accept_button"
                    android:textColor="#4E342E"
                    app:backgroundTint="@android:color/darker_gray" />


            </LinearLayout>



        </LinearLayout>

    </ScrollView>




    </RelativeLayout>

