<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.jobApplication.RatingsActivity">


    <LinearLayout
        android:id="@+id/RatingLL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/RatingBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="@android:color/darker_gray"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/RatingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_weight="10"
            android:text="@string/ratings_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toStartOf="@+id/ApplyJobButton"
            app:layout_constraintStart_toEndOf="@+id/JobListingDetailsBackButton"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/RatingLL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RatingLL1"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/RatingTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_review_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/RatingLL3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RatingLL2"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/RatingTitleValueTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/RatingLL4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RatingLL3"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/RatingStarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_rating"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />



    </LinearLayout>
    <LinearLayout
        android:id="@+id/RatingLL5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RatingLL4"
        android:orientation="horizontal"
        android:padding="10dp">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:max="5"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/RatingLL6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RatingLL5"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/RatingReviewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_review"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/RatingLL7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RatingLL6"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/RatingReviewValueTextView"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>

    <Button
        android:id="@+id/RatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:text="@string/submit_button"
        android:textColor="#4E342E"
        app:backgroundTint="@android:color/darker_gray" />




</RelativeLayout>